# thesis

./: .gitignore  .gitmodules  Cargo.toml  README.md  beam.py  build.rs  circle.py
autodiff/: Cargo.toml
autodiff/src/: gradient.rs  hessian.rs  lib.rs
autodiff/tests/: hessian.rs  lib.rs
data/: armadillo_4k.ele  armadillo_4k.node
examples/: armadillo.rs  armadillo_cholmod.rs  armadillo_copy.rs  armadillo_hinv.rs  armadillonew.rs  armadillopara.rs  beam.rs  beam_cholmod.rs  beam_g.rs  beam_ground.rs  beam_hinv.rs  beamnew.rs  beampara.rs  bounce.rs  bouncenew.rs  circle.rs  circle2d.rs  circlehinv.rs  circlenew.rs  circlepara.rs  circlesparse.rs  cube.rs  parameters2d.rs  skipfirststep.rs  test.rs  test2.rs
mesh/: Cargo.toml
mesh/src/: dim2.rs  dim3.rs  energy.rs  lib.rs  mesh_impl2d.rs  mesh_impl3d.rs  plane.rs  util.rs
optimization/: Cargo.toml
optimization/src/: lib.rs
optimization/src/linearsolver/: csccholesky.rs  direct.rs  minres.rs  mod.rs  newtoncg.rs
optimization/src/linesearch/: mod.rs  simplels.rs
optimization/src/solver/: mod.rs  newton.rs
optimization/tests/: lib.rs  linearsolver.rs
output/matrix/: a.py
paper/: Makefile  references.bib  thesis.tex
src/: bindings.rs  csc.rs  elastic.rs  energy.rs  lib.rs  main.rs  my_newton.rs  mymacro.rs  scenarios.rs  static_object.rs
src/old/: bouncing.rs
src/old/old/: oldbouncing.rs  oldbouncing_update.rs  simple.rs
src/scenarios/: bouncing.rs  bouncing_update.rs  bouncingupdate.rs  mod.rs  simple_new.rs
src/scenarios/old/: simple_new.rs
src/static_object/: mod.rs
