[package]
name = "thesis"
version = "0.1.0"
authors = ["Hantao Hui <hantao.hui@rwth-aachen.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = {version = "0.29", path ="nalgebra" ,features=["rand","compare"]}
nalgebra-sparse = {version = "0.5.0", path="nalgebra/nalgebra-sparse", features = ["io"]}

mesh = {version = "0.1.0",path = "mesh"}
autodiff = {version = "0.1.0",path = "autodiff"}
optimization = {version = "0.1.0", path = "optimization"}
matrixcompare = "0.2.0"
num = "0.4.0"

[workspace]
members = [ "mesh","autodiff","optimization"]
exclude = [ "./nalgebra" ]