[package]
name = "optimization"
version = "0.1.0"
authors = ["Hantao Hui <hantao.hui@rwth-aachen.de>"]
edition = "2018"


[dependencies]
nalgebra = {version = "0.29",path="../nalgebra" }
nalgebra-sparse = {version = "0.5.0", path="../nalgebra/nalgebra-sparse"}
num = "0.4.0"
autodiff = {version ="0.1.0", path = "../autodiff"}